# pa-workflow

./: .copier-answers.yml  .gitignore  =0.6.54  AGENTS.md  API_RETRY.md  ATTACHMENT_SUPPORT.md  BATCH_PROCESSING.md  BATCH_PROCESSING_IMPLEMENTATION.md  BEFORE_AFTER_VERIFIER.md  BUG_FIXES_SUMMARY.md  CHINESE_OCR_FIX_SUMMARY.md  CHINESE_OCR_SUPPORT.md  CHINESE_PDF_FIX_SUMMARY.md  DEPENDENCY_FIX_SUMMARY.md  EMAIL_CHAIN_HANDLING_IMPLEMENTATION.md  EXAMPLE_BEFORE_AFTER.md  EXECUTION_LOG_ATTACHMENT.md  EXTRACT_SCHEMA_FIX_SUMMARY.md  FINAL_STATUS.md  FIX_SUMMARY.md  FIX_SUMMARY_ISSUE_39.md  FIX_SUMMARY_V2.md  FIX_SUMMARY_WORKFLOW_NOT_RESPONDING.md  IMAGE_GEN_EXTENSION_FIX.md  IMAGE_GEN_FIX_SUMMARY.md  IMAGE_GEN_TOOL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  INTERMITTENT_PARSE_FIX.md  ISSUE_RESOLUTION.md  ISSUE_RESOLUTION_EMAIL_TRUNCATION.md  ISSUE_RESOLUTION_LANGFUSE_TRACING.md  LANGFUSE_FIX_SUMMARY.md  LANGFUSE_MANUAL_FLUSH.md  LANGFUSE_MANUAL_FLUSH_FIX_SUMMARY.md  LANGFUSE_TRACING_FIX.md  LLAMACLOUD_FILES.md  LLAMAPARSE_V2_MIGRATION.md  LOG_STREAMING_FEATURE.md  (+74 more)
tests/: manual_verify_static_chart_fix.py  test_api_retry.py  test_attachment_types.py  test_batch_processing.py  test_email_chain_splitting.py  test_email_from_address.py  test_email_html_response.py  test_email_workflow_error_handling.py  test_email_workflow_validation.py  test_execution_log_attachment.py  test_extract_pipeline.py  test_llamacloud_attachments.py  test_long_email_handling.py  test_mailgun_integration.py  test_observability.py  test_pdf_parsing.py  (+17 more)
(+28 files in other folders)
