[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic"
version = "0.1.0"
description = "Minimal starter workflow project"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "llama-index>=0.14.10",
    "llama-index-llms-openai>=0.6.10",
    "llama-index-llms-google-genai>=0.7.4",
    "llama-index-workflows>=2.5.0,<3.0.0",
    "llama-parse>=0.6.54",
    "llama-cloud-services>=0.0.17",
    "httpx",  # Required for LlamaCloud presigned URL downloads and email callbacks
    "tenacity>=8.0.0",  # Required for retry logic with exponential backoff
    "deep-translator>=1.11.0",  # Google Translate API wrapper
    "reportlab>=4.0.0",  # PDF generation library
    "llama-index-callbacks-langfuse>=0.4.0",  # Langfuse observability integration
]

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]

[tool.hatch.envs.default.scripts]
format = "ruff format ."
format-check = "ruff format --check ."
lint = "ruff check --fix ."
lint-check = ["ruff check ."]
typecheck = "ty check src"
test = "pytest"
all-check = ["format-check", "lint-check", "test"]
all-fix = ["format", "lint", "test"]

[tool.llamadeploy]
env_files = [".env"]

[tool.llamadeploy.workflows]
default = "basic.workflow:workflow"
email = "basic.email_workflow:email_workflow"

[tool.llamadeploy.server]
server = "basic.server:server"

